# klawd-cli

./: .coverage  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  alert_rules.yml  docker-compose.yml  hiclaw-team.yaml  higress-config.yaml  litellm_config.yaml  nemoclaw-policy.yaml  omni_agent.service  otel-config.yaml  patch_competitive_cron.py  patch_optimistic_lock.py  prism-hooks.yaml  prometheus.yml  pyproject.toml  r_and_d_daemon.py  requirements.txt  run_server.sh
.Jules/: palette.md
.github/workflows/: lint.yml  security-scan.yml  test.yml
benchmarks/: benchmark_osv.py
docs/: architecture.md  production_readiness_scorecard.md  skill_schema.md
docs/rust-workers/: contracts.md  operations.md
omni_agent/: main.py
omni_agent/agents/: absorber.py  base.py  engineer.py  planner.py  reviewer.py
omni_agent/api/: server.py
omni_agent/api/static/: index.html
omni_agent/skills/: __init__.py
omni_agent/tests/: test_api.py  test_router.py
omni_agent/utils/: logging_config.py  memory.py  nim_router.py  skill_manager.py
rust-workers/: Cargo.toml  Dockerfile
rust-workers/src/: main.rs  normalizer.rs
scripts/: setup-dev.sh
src/: settings.py
src/application/: prompt_registry.py  workflows.py
src/application/arap/: circular_guard.py  competitive_cron.py
src/application/hermes/: __init__.py  learning_loop.py
src/application/ingestion/: service.py
src/application/orchestration/: __init__.py  failure_classifier.py
src/domain/: agents.py  skills.py
src/domain/agents/: __init__.py  absorber.py  auditor.py  base.py  engineer.py  planner.py  reviewer.py
src/domain/arap/: dedup.py  immunization.py  skill_parser.py
src/infrastructure/: database.py  llm_router.py  provenance.py
src/infrastructure/ingestion/: __init__.py  repo_ingestor.py
src/infrastructure/llm/: __init__.py  routing_auditor.py  task_classifier.py  thread_parker.py
src/infrastructure/mcp/: __init__.py  cyberstrike_client.py  hexstrike_client.py
src/infrastructure/memory/: __init__.py  agent_memory.py  optimistic_lock.py
src/infrastructure/openhuman/: __init__.py  capability_router.py
src/infrastructure/registry/: __init__.py  external_skill_ingestion.py  skill_adapters.py  skill_registry.py
src/infrastructure/rust_workers/: __init__.py  client.py  errors.py
src/infrastructure/security/: __init__.py  execution_adapter.py  hooks.py  hooks_impl.py
src/presentation/api/: main.py
src/presentation/static/css/: style.css
src/presentation/static/js/: app.js
src/presentation/templates/: index.html
src/tests/: test_router.py
src/utils/: memory.py  nim_router.py
tests/: conftest.py  test_agent_memory.py  test_api.py  test_arap_memory_and_guard.py  test_dedup.py  test_execution_adapter.py  test_external_ingestion.py  test_failure_classifier.py  test_failure_classifier_openhuman.py  test_hermes_learning_loop.py  test_memory_and_locking.py  test_omni_agent.py  test_omni_memory.py  test_openhuman_context.py  test_prompt_registry.py  test_router.py  test_security_hooks.py  test_skills.py  test_workflows.py
tests/conformance/: test_python_rust_conformance.py
tests/fixtures/skills/git_repo_a/: skill.json
tests/fixtures/skills/git_repo_b/: manifest.md
tests/fixtures/skills/native/: SKILL.md
tests/utils/: test_nim_router.py
