[tool.poetry]
packages = [
  { include = "src" }
]
name = "omni-agent"
version = "0.1.0"
description = "OmniAgent Enterprise"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
openai = "1.55.0"
pydantic = "2.9.2"
python-dotenv = "1.0.1"
fastapi = "0.115.5"
uvicorn = "0.32.1"
httpx = "0.27.0"
requests = "2.31.0"
sqlalchemy = "2.0.36"
websockets = "12.0"
networkx = "3.2.1"
sentence-transformers = "2.7.0"
redis = "5.0.4"
watchdog = "4.0.0"
semgrep = "1.74.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
black = "^24.4.2"
ruff = "^0.4.4"
mypy = "^1.10.0"
bandit = "^1.7.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
