
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[project]
name = "klawd-cli"
version = "0.1.0"
description = "OmniAgent Enterprise - Autonomous Software Engineering AI Agent"
authors = [{name = "Sthitaprajna Biswal", email = "32985707+sthitiprajnya@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.poetry]
name = "klawd-cli"
version = "0.1.0"
description = "OmniAgent Enterprise - Autonomous Software Engineering AI Agent"
authors = ["Sthitaprajna Biswal <32985707+sthitiprajnya@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.55.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.1"
fastapi = "^0.115.5"
uvicorn = {version = "^0.32.1", extras = ["standard"]}
httpx = "^0.27.0"
requests = "^2.31.0"
sqlalchemy = "^2.0.36"
websockets = "^12.0"
networkx = "^3.2.1"
sentence-transformers = "^2.7.0"
redis = "^5.0.4"
watchdog = "^4.0.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-exporter-jaeger = "^1.21.0"
prometheus-client = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.12.0"
black = "^24.1.0"
ruff = "^0.1.13"
mypy = "^1.8.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"
types-requests = "^2.31.0"
types-redis = "^4.6.0"

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 120
target-version = "py310"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # function is too complex
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".mypy_cache",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
strict_equality = true
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "src.infrastructure.*",
    "src.domain.*",
    "src.application.*",
]
ignore_errors = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short --cov=src --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if 0:",
    "if False:",
]

[tool.isort]
profile = "black"
line_length = 120
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/venv/*"]

[tool.pydantic]
python_version = "3.10"
